CSS do Main Finalizado

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Header -->
     <header>
-      <img src="/icons/logo.svg" alt="Logomarca" class="mobile-not" />
+      <img src="/icons/logo.svg" alt="Logomarca" class="esconder-mobile" />
     </header>
 
     <!-- Main -->
@@ -34,7 +34,7 @@
       <form>
         <div>
           <input type="text" placeholder="Adicionar um novo item">
-          <div id="errormessage" class="delet">
+          <div id="errormessage" class="deletar">
             <img src="/icons/circle-red.svg" alt="">
             Digite um item para sua lista!
           </div>
